force-app/main/default/objects/Proposal_Participant_Association__c/Proposal_Participant_Association__c.object-meta.xml
<CustomObject>
    <label>Proposal Participant Association</label>
    <nameField>
        <displayFormat>PPA-{00000}</displayFormat>
        <label>Proposal Participant Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Participant Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>