force-app/main/default/objects/Proposal_Participant_Association__c/fields/Added_for_Additional_Role__c.field-meta.xml
<CustomField>
    <fullName>Added_for_Additional_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added for Additional Role</label>
    <type>Checkbox</type>
</CustomField>