force-app/main/default/objects/Proposal_Participant_Association__c/fields/Added_for_Full__c.field-meta.xml
<CustomField>
    <fullName>Added_for_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added for Full</label>
    <type>Checkbox</type>
</CustomField>