force-app/main/default/objects/Proposal_Participant_Association__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>ReSubmitted</fullName>
            </value>
            <value>
                <fullName>ReSubmit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>