force-app/main/default/objects/Proposal_Participant_Association__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <label>Document URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>