force-app/main/default/objects/Proposal_Participant_Association__c/fields/Document_URL_for_Full__c.field-meta.xml
<CustomField>
    <fullName>Document_URL_for_Full__c</fullName>
    <label>Document URL for Full</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>