force-app/main/default/objects/Proposal_Participant_Association__c/fields/First_Email_Sent_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Email_Sent_Date_and_Time__c</fullName>
    <label>First Email Sent Date and Time</label>
    <type>DateTime</type>
</CustomField>