force-app/main/default/objects/Proposal_Participant_Association__c/fields/how_application_align__c.field-meta.xml
<CustomField>
    <fullName>how_application_align__c</fullName>
    <description>How does the application align with your lab&apos;s research?</description>
    <inlineHelpText>How does the application align with your lab&apos;s research?</inlineHelpText>
    <label>how application align</label>
    <type>TextArea</type>
</CustomField>