force-app/main/default/objects/Proposal_Participant_Association__c/fields/How_will_you_support_Applicant_s_career__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_support_Applicant_s_career__c</fullName>
    <description>How will you support Applicant’s career development</description>
    <label>How will you support Applicant’s career</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>