force-app/main/default/objects/Proposal_Participant_Association__c/fields/Invitation_Link__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Link__c</fullName>
    <label>Invitation Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>