force-app/main/default/objects/Proposal_Participant_Association__c/fields/Number_of_postdocs_trained_in_your_lab__c.field-meta.xml
<CustomField>
    <fullName>Number_of_postdocs_trained_in_your_lab__c</fullName>
    <description>Number of postdocs trained in your laboratory.</description>
    <inlineHelpText>Number of postdocs trained in your laboratory.</inlineHelpText>
    <label>Number of postdocs trained in your lab</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>