force-app/main/default/objects/Proposal_Participant_Association__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proposal Participant Associations</relationshipLabel>
    <relationshipName>Proposal_Participant_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>