force-app/main/default/objects/Proposal_Participant_Association__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Proposal Participant Associations</relationshipLabel>
    <relationshipName>Proposal_Participant_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>