force-app/main/default/objects/Proposal_Participant_Association__c/fields/Relationship_of_current_app_to_Host__c.field-meta.xml
<CustomField>
    <fullName>Relationship_of_current_app_to_Host__c</fullName>
    <description>Relationship of current application to other work in the Host Institution/Department</description>
    <inlineHelpText>Relationship of current application to other work in the Host Institution/Department</inlineHelpText>
    <label>Relationship of current app to Host</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>