force-app/main/default/objects/Proposal_Participant_Association__c/fields/Share_your_plan_how_you_will_manage__c.field-meta.xml
<CustomField>
    <fullName>Share_your_plan_how_you_will_manage__c</fullName>
    <description>Share your plan how you will manage and share the data generated from this project</description>
    <inlineHelpText>Share your plan how you will manage and share the data generated from this project</inlineHelpText>
    <label>Share your plan how you will manage</label>
    <type>TextArea</type>
</CustomField>