force-app/main/default/objects/Proposal_Participant_Association__c/fields/Your_present_past_relevant_grants__c.field-meta.xml
<CustomField>
    <fullName>Your_present_past_relevant_grants__c</fullName>
    <description>Your present/past relevant research grants</description>
    <inlineHelpText>Your present/past relevant research grants</inlineHelpText>
    <label>Your present/past relevant grants</label>
    <type>TextArea</type>
</CustomField>